--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 services:
-  article:
+  # Post DB
+  post:
     image: arm64v8/mysql
     restart: always
     ports:
@@ -10,8 +11,25 @@ services:
       MYSQL_DATABASE: default
       MYSQL_USER: default
       MYSQL_PASSWORD: 1234
-    container_name: "batch_db"
+    container_name: "post_db"
     volumes:
-      - ./article/maria:/var/lib/mysqlysql
+      - ./post/maria:/var/lib/mysqlysql
       # init.sql
-      - ./article/sql:/docker-entrypoint-initdb.d
+      - ./post/sql:/docker-entrypoint-initdb.d
+  # User DB
+  user:
+    image: arm64v8/mysql
+    restart: always
+    ports:
+      - "23306:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: 1234
+      MYSQL_DATABASE: default
+      MYSQL_USER: default
+      MYSQL_PASSWORD: 1234
+    container_name: "user_db"
+    volumes:
+      - ./user/maria:/var/lib/mysqlysql
+      # init.sql
+      - ./user/sql:/docker-entrypoint-initdb.d
+
